--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -46,13 +46,33 @@ jobs:
     - name: Run CI checks
       run: mise run ci --no-docker
     
+    - name: Extract release notes from CHANGELOG
+      id: changelog
+      run: |
+        # Extract version from tag (remove 'v' prefix)
+        VERSION=${GITHUB_REF_NAME#v}
+        echo "Version: $VERSION"
+        
+        # Use mise task to extract changelog
+        if mise run extract-changelog "$VERSION" --output /tmp/release_notes.md; then
+          echo "use_auto_notes=false" >> $GITHUB_OUTPUT
+          echo "Release notes preview:"
+          echo "---"
+          cat /tmp/release_notes.md
+          echo "---"
+        else
+          echo "No changelog entry found for version $VERSION, using auto-generated notes"
+          echo "use_auto_notes=true" >> $GITHUB_OUTPUT
+        fi
+
     - name: Create GitHub Release
       uses: softprops/action-gh-release@v2
       with:
         files: |
           dist/*.whl
           dist/*.tar.gz
-        generate_release_notes: true
+        body_path: ${{ steps.changelog.outputs.use_auto_notes == 'false' && '/tmp/release_notes.md' || '' }}
+        generate_release_notes: ${{ steps.changelog.outputs.use_auto_notes == 'true' }}
         draft: false
         prerelease: ${{ contains(github.ref_name, 'alpha') || contains(github.ref_name, 'beta') || contains(github.ref_name, 'rc') }}
     
