--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "kiarina-python"
-version = "1.0.1"
+version = "1.1.0"
 description = "A comprehensive namespace package monorepo providing essential utilities for modern Python development"
 readme = "README.md"
 license = { text = "MIT" }
@@ -37,6 +37,7 @@ classifiers = [
 ]
 requires-python = ">=3.12"
 dependencies = [
+    "kiarina",
     "kiarina-lib-falkordb",
     "kiarina-lib-redis",
     "kiarina-lib-redisearch",
@@ -73,6 +74,7 @@ test = [
 
 [tool.uv.workspace]
 members = [
+    "packages/kiarina",
     "packages/kiarina-lib-falkordb",
     "packages/kiarina-lib-redis",
     "packages/kiarina-lib-redisearch",
@@ -82,6 +84,7 @@ members = [
 ]
 
 [tool.uv.sources]
+kiarina = { workspace = true }
 kiarina-lib-falkordb = { workspace = true }
 kiarina-lib-redis = { workspace = true }
 kiarina-lib-redisearch = { workspace = true }
