feat: switch to kiarina-falkordb for redis-py 6.x compatibility
- Replace falkordb dependency with kiarina-falkordb>=1.2.0
- Remove git-based dependency from uv.sources
- Resolves dependency conflicts for pip install kiarina
- kiarina-falkordb is a temporary fork with redis-py 6.x support

--- a/packages/kiarina-lib-falkordb/pyproject.toml
+++ b/packages/kiarina-lib-falkordb/pyproject.toml
@@ -25,14 +25,11 @@ classifiers = [
 ]
 requires-python = ">=3.12"
 dependencies = [
-    "falkordb",
+    "kiarina-falkordb>=1.2.0",
     "pydantic-settings>=2.10.1",
     "pydantic-settings-manager>=2.1.0",
     "redis>=6.4.0",
 ]
-
-[tool.uv.sources]
-falkordb = { git = "https://github.com/kiarina/falkordb-py.git", rev = "develop" }
 
 [project.urls]
 Homepage = "https://github.com/kiarina/kiarina-python"
