fix: update license format in pyproject.toml files across all packages

--- a/packages/kiarina-llm/pyproject.toml
+++ b/packages/kiarina-llm/pyproject.toml
@@ -3,7 +3,7 @@ name = "kiarina-llm"
 version = "1.1.1"
 description = "LLM utilities and context management for kiarina namespace"
 readme = "README.md"
-license = { text = "MIT" }
+license = "MIT"
 authors = [
     { name = "kiarina", email = "kiarinadawa@gmail.com" }
 ]
@@ -14,7 +14,6 @@ keywords = ["llm", "ai", "context", "pydantic", "settings", "agent", "runner"]
 classifiers = [
     "Development Status :: 4 - Beta",
     "Intended Audience :: Developers",
-    "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.12",
