--- a/packages/kiarina-lib-redis/pyproject.toml
+++ b/packages/kiarina-lib-redis/pyproject.toml
@@ -3,7 +3,7 @@ name = "kiarina-lib-redis"
 version = "1.1.1"
 description = "Redis client library for kiarina namespace"
 readme = "README.md"
-license = { text = "MIT" }
+license = "MIT"
 authors = [
     { name = "kiarina", email = "kiarinadawa@gmail.com" }
 ]
@@ -14,7 +14,6 @@ keywords = ["redis", "client", "pydantic", "settings", "database", "cache", "asy
 classifiers = [
     "Development Status :: 4 - Beta",
     "Intended Audience :: Developers",
-    "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.12",
