--- a/packages/kiarina-lib-redisearch/pyproject.toml
+++ b/packages/kiarina-lib-redisearch/pyproject.toml
@@ -3,7 +3,7 @@ name = "kiarina-lib-redisearch"
 version = "1.1.1"
 description = "RediSearch client library for kiarina namespace"
 readme = "README.md"
-license = { text = "MIT" }
+license = "MIT"
 authors = [
     { name = "kiarina", email = "kiarinadawa@gmail.com" }
 ]
@@ -14,7 +14,6 @@ keywords = ["redisearch", "search", "vector", "fulltext", "redis", "pydantic", "
 classifiers = [
     "Development Status :: 4 - Beta",
     "Intended Audience :: Developers",
-    "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.12",
