--- a/packages/kiarina-utils-file/pyproject.toml
+++ b/packages/kiarina-utils-file/pyproject.toml
@@ -3,7 +3,7 @@ name = "kiarina-utils-file"
 version = "1.1.1"
 description = "Comprehensive Python library for file I/O operations with automatic encoding detection, MIME type detection, and support for various file formats"
 readme = "README.md"
-license = { text = "MIT" }
+license = "MIT"
 authors = [
     { name = "kiarina", email = "kiarinadawa@gmail.com" }
 ]
@@ -17,7 +17,6 @@ keywords = [
 classifiers = [
     "Development Status :: 4 - Beta",
     "Intended Audience :: Developers",
-    "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.12",
