--- a/packages/kiarina/pyproject.toml
+++ b/packages/kiarina/pyproject.toml
@@ -35,7 +35,9 @@ classifiers = [
 ]
 requires-python = ">=3.12"
 dependencies = [
+    "kiarina-lib-cloudflare>=1.3.0",
     "kiarina-lib-falkordb>=1.0.1",
+    "kiarina-lib-google>=1.3.0",
     "kiarina-lib-redis>=1.0.1",
     "kiarina-lib-redisearch>=1.0.1",
     "kiarina-llm>=1.0.1",
