--- a/packages/kiarina-lib-google-auth/pyproject.toml
+++ b/packages/kiarina-lib-google-auth/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "kiarina-lib-google"
+name = "kiarina-lib-google-auth"
 version = "1.3.0"
 description = "Google Cloud client library for kiarina namespace"
 readme = "README.md"
@@ -31,8 +31,8 @@ dependencies = [
 Homepage = "https://github.com/kiarina/kiarina-python"
 Repository = "https://github.com/kiarina/kiarina-python"
 Issues = "https://github.com/kiarina/kiarina-python/issues"
-Changelog = "https://github.com/kiarina/kiarina-python/blob/main/packages/kiarina-lib-google/CHANGELOG.md"
-Documentation = "https://github.com/kiarina/kiarina-python/tree/main/packages/kiarina-lib-google#readme"
+Changelog = "https://github.com/kiarina/kiarina-python/blob/main/packages/kiarina-lib-google-auth/CHANGELOG.md"
+Documentation = "https://github.com/kiarina/kiarina-python/tree/main/packages/kiarina-lib-google-auth#readme"
 
 [build-system]
 requires = ["hatchling"]
