--- a/packages/kiarina/pyproject.toml
+++ b/packages/kiarina/pyproject.toml
@@ -37,7 +37,7 @@ requires-python = ">=3.12"
 dependencies = [
     "kiarina-lib-cloudflare>=1.3.0",
     "kiarina-lib-falkordb>=1.0.1",
-    "kiarina-lib-google>=1.3.0",
+    "kiarina-lib-google-auth>=1.3.0",
     "kiarina-lib-redis>=1.0.1",
     "kiarina-lib-redisearch>=1.0.1",
     "kiarina-llm>=1.0.1",
