feat: add Google Auth credentials helpers and settings with tests and dependencies

--- a/packages/kiarina-lib-google-auth/pyproject.toml
+++ b/packages/kiarina-lib-google-auth/pyproject.toml
@@ -23,6 +23,7 @@ classifiers = [
 ]
 requires-python = ">=3.12"
 dependencies = [
+    "google-api-python-client>=2.184.0",
     "pydantic-settings>=2.10.1",
     "pydantic-settings-manager>=2.1.0",
 ]
