--- a/mise.toml
+++ b/mise.toml
@@ -3,6 +3,7 @@ python = "3.13"
 uv = "latest"
 
 [env]
+_.file = ".env"
 # Test configuration
 KIARINA_LIB_REDIS_URL = "redis://localhost:6379"
 KIARINA_LIB_FALKORDB_URL = "falkor://localhost:6380"
