feat(kiarina-lib-google-cloud-storage): add Google Cloud Storage client library (#26)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,7 @@ dependencies = [
     "kiarina-lib-cloudflare-auth",
     "kiarina-lib-falkordb",
     "kiarina-lib-google-auth",
+    "kiarina-lib-google-cloud-storage",
     "kiarina-lib-redis",
     "kiarina-lib-redisearch",
     "kiarina-llm",
@@ -81,6 +82,7 @@ members = [
     "packages/kiarina-lib-cloudflare-auth",
     "packages/kiarina-lib-falkordb",
     "packages/kiarina-lib-google-auth",
+    "packages/kiarina-lib-google-cloud-storage",
     "packages/kiarina-lib-redis",
     "packages/kiarina-lib-redisearch",
     "packages/kiarina-llm",
@@ -93,6 +95,7 @@ kiarina = { workspace = true }
 kiarina-lib-cloudflare-auth = { workspace = true }
 kiarina-lib-falkordb = { workspace = true }
 kiarina-lib-google-auth = { workspace = true }
+kiarina-lib-google-cloud-storage = { workspace = true }
 kiarina-lib-redis = { workspace = true }
 kiarina-lib-redisearch = { workspace = true }
 kiarina-llm = { workspace = true }
@@ -104,6 +107,7 @@ mypy_path = [
     "packages/kiarina-lib-cloudflare-auth/src",
     "packages/kiarina-lib-falkordb/src",
     "packages/kiarina-lib-google-auth/src",
+    "packages/kiarina-lib-google-cloud-storage/src",
     "packages/kiarina-lib-redis/src",
     "packages/kiarina-lib-redisearch/src",
     "packages/kiarina-llm/src",
@@ -125,6 +129,7 @@ source = [
     "packages/kiarina-lib-cloudflare-auth/src",
     "packages/kiarina-lib-falkordb/src",
     "packages/kiarina-lib-google-auth/src",
+    "packages/kiarina-lib-google-cloud-storage/src",
     "packages/kiarina-lib-redis/src",
     "packages/kiarina-lib-redisearch/src",
     "packages/kiarina-llm/src",
