--- a/packages/kiarina/pyproject.toml
+++ b/packages/kiarina/pyproject.toml
@@ -36,6 +36,7 @@ classifiers = [
 requires-python = ">=3.12"
 dependencies = [
     "kiarina-lib-cloudflare-auth>=1.3.0",
+    "kiarina-lib-cloudflare-d1>=1.6.0",
     "kiarina-lib-falkordb>=1.0.1",
     "kiarina-lib-google-auth>=1.3.0",
     "kiarina-lib-google-cloud-storage>=1.4.0",
