--- a/packages/kiarina-lib-google-cloud-storage/test_settings.sample.yaml
+++ b/packages/kiarina-lib-google-cloud-storage/test_settings.sample.yaml
@@ -4,3 +4,7 @@ kiarina.lib.google.auth:
     project_id: your-project-id
     service_account_email: your-service-account@your-project.iam.gserviceaccount.com
     service_account_file: ~/.gcp/service-account/your-project/your-service-account/key.json
+kiarina.lib.google.cloud_storage:
+  default:
+    bucket_name: your-bucket-name
+    blob_name_pattern: "my-service/{tenant_id}/users/{user_id}/files/{basename}"
