--- a/packages/kiarina-lib-google-cloud-storage/test_settings.sample.yaml
+++ b/packages/kiarina-lib-google-cloud-storage/test_settings.sample.yaml
@@ -8,3 +8,8 @@ kiarina.lib.google.cloud_storage:
   default:
     bucket_name: your-bucket-name
     blob_name_pattern: "my-service/{tenant_id}/users/{user_id}/files/{basename}"
+  no_blob_name_pattern:
+    bucket_name: your-bucket-name
+  fixed:
+    bucket_name: your-bucket-name
+    blob_name_pattern: "my-service/kiarina-lib-google-cloud-storage/users/test_get_blob_with_fixed_pattern/files/miineko.png"
