--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -45,6 +45,8 @@ jobs:
     
     - name: Run CI checks
       run: mise run ci --no-docker
+      env:
+        GH_TOKEN: ${{ github.token }}
     
     - name: Extract release notes from CHANGELOG
       id: changelog
