fix(ci): add GH_TOKEN to all workflows for test data download

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,6 +58,8 @@ jobs:
 
     - name: Run CI pipeline
       run: mise run ci --no-docker
+      env:
+        GH_TOKEN: ${{ github.token }}
 
     - name: Upload coverage reports
       if: matrix.python-version == '3.13'
