--- a/packages/kiarina/pyproject.toml
+++ b/packages/kiarina/pyproject.toml
@@ -40,6 +40,7 @@ dependencies = [
     "kiarina-lib-falkordb>=1.0.1",
     "kiarina-lib-google-auth>=1.3.0",
     "kiarina-lib-google-cloud-storage>=1.4.0",
+    "kiarina-lib-openai>=1.11.0",
     "kiarina-lib-redis>=1.0.1",
     "kiarina-lib-redisearch>=1.0.1",
     "kiarina-llm>=1.0.1",
