--- a/packages/kiarina/pyproject.toml
+++ b/packages/kiarina/pyproject.toml
@@ -35,6 +35,7 @@ classifiers = [
 ]
 requires-python = ">=3.12"
 dependencies = [
+    "kiarina-i18n>=1.15.1",
     "kiarina-lib-anthropic>=1.10.0",
     "kiarina-lib-cloudflare-auth>=1.3.0",
     "kiarina-lib-cloudflare-d1>=1.6.0",
