--- a/packages/kiarina-currency/pyproject.toml
+++ b/packages/kiarina-currency/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
-name = "kiarina"
+name = "kiarina-currency"
 version = "1.27.0"
-description = "A comprehensive namespace package collection providing essential utilities for modern Python development"
+description = "Currency utilities for the kiarina namespace"
 readme = "README.md"
 license = "MIT"
 authors = [
@@ -11,15 +11,9 @@ maintainers = [
     { name = "kiarina", email = "kiarinadawa@gmail.com" }
 ]
 keywords = [
+    "currency",
     "utilities",
     "namespace-package",
-    "file-io",
-    "llm",
-    "redis",
-    "falkordb",
-    "redisearch",
-    "async",
-    "pydantic"
 ]
 classifiers = [
     "Development Status :: 5 - Production/Stable",
@@ -35,25 +29,16 @@ classifiers = [
 ]
 requires-python = ">=3.12"
 dependencies = [
-    "kiarina-currency>=1.27.0",
-    "kiarina-i18n>=1.15.1",
-    "kiarina-lib-anthropic>=1.10.0",
-    "kiarina-lib-cloudflare-auth>=1.3.0",
-    "kiarina-lib-cloudflare-d1>=1.6.0",
-    "kiarina-lib-falkordb>=1.0.1",
-    "kiarina-lib-google-auth>=1.3.0",
-    "kiarina-lib-google-cloud-storage>=1.4.0",
-    "kiarina-lib-openai>=1.10.0",
-    "kiarina-lib-redis>=1.0.1",
-    "kiarina-lib-redisearch>=1.0.1",
-    "kiarina-llm>=1.0.1",
-    "kiarina-utils-common>=1.0.1",
-    "kiarina-utils-file>=1.0.1",
+    "httpx>=0.28.1",
+    "kiarina-utils-common>=1.11.0",
+    "pydantic>=2.10.6",
+    "pydantic-settings>=2.7.1",
+    "pydantic-settings-manager>=2.3.0",
 ]
 
 [project.urls]
 Homepage = "https://github.com/kiarina/kiarina-python"
 Repository = "https://github.com/kiarina/kiarina-python.git"
 Issues = "https://github.com/kiarina/kiarina-python/issues"
-Changelog = "https://github.com/kiarina/kiarina-python/blob/main/CHANGELOG.md"
-Documentation = "https://github.com/kiarina/kiarina-python#readme"
+Changelog = "https://github.com/kiarina/kiarina-python/blob/main/packages/kiarina-currency/CHANGELOG.md"
+Documentation = "https://github.com/kiarina/kiarina-python/tree/main/packages/kiarina-currency#readme"
